--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>My Portfolio</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="img-box">
-              <img class="img-1" src="/images/pp.jpg" alt="Arnold Pampelon">
+              <img class="img-1" src="images/pp.jpg" alt="Arnold Pampelon">
             </div>
       </div>  
   </section>
@@ -44,7 +44,7 @@
       <section id="aboutme.html" class="showcase-2">
         <div class="container grid">
             <div class="img-box">
-              <img class="img-2" src="/images/pp.jpg" alt="Arnold Pampelon">
+              <img class="img-2" src="images/pp.jpg" alt="Arnold Pampelon">
           </div>
               <div class="showcase-text">
                   <h2>About <span>Me</span></h3>
