--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       <div class="container grid">
           <div class="showcase-text">
                 <h1>Hi <br>I'm <span>Arnold</span><br>a Frontend Web Developer</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut quos assumenda, officiis commodi nisi cum ipsam delectus corporis atque dolores, quo voluptatem in aperiam ex dolorem. Quaerat provident corrupti neque.
-                Tempora voluptates est dicta recusandae id iure laudantium ad modi laborum sequi. A doloribus magni exercitationem fugit? Ipsa quia facere fugiat veritatis, ipsum nihil quasi molestiae sint quod, suscipit perspiciatis!</p>
+                <p>I'm a Frontend Web Developer who loves creating clean, responsive websites. I work with HTML, CSS, and JavaScript to build user-friendly designs. My focus is on making sure every website I build looks great and works well on all devices.</p>
                 <div class="btn-box">
                   <button class="btn-1">Hire Me</button>
                   <button class="btn-2">Experience</button>
@@ -49,8 +48,7 @@
               <div class="showcase-text">
                   <h2>About <span>Me</span></h3>
                   <h1>Frontend <span>Developer</span></h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum esse et non ut quam sapiente incidunt possimus, optio necessitatibus minima doloribus quos, quod porro aliquam est odio natus placeat veritatis!
-                  Odio suscipit nemo maiores ratione, dolorum dolore deserunt in optio sapiente quas architecto temporibus a minima atque ea velit hic voluptatum saepe dolores quibusdam doloremque unde fugiat natus ipsum. Asperiores!</p>
+                  <p>I am Arnold Pampelon, an aspiring frontend web developer. I love creating responsive websites using my skills in HTML, CSS, and my foundational knowledge of JavaScript. I am eager to learn and adapt to different technologies.</p>
                   <button class="btn-3">Experience</button>
               </div>  
         </div>
